Upload code coverage to Codecov
Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,6 +52,11 @@ jobs:
         with:
           name: Code Coverage
           path: coverage
+      - name: Upload code coverage to Codecov
+        uses: codecov/codecov-action@v2
+        with:
+          file: coverage/*.txt  # Specify the path to your Cobertura format coverage report file
+          flags: unittests
       - name: Analyze code coverage
         run: |
           # Extract the line coverage percentage from the Summary.txt file
