--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
       COVERAGE_THRESHOLD: 70
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/checkout@master
       - name: Parse release version
         run: python ./.github/scripts/get_release_version.py
       - name: Setup .NET Core
