--- a/.codecov.yaml
+++ b/.codecov.yaml
@@ -1,11 +1,12 @@
 coverage:
-  # Commit status https://docs.codecov.io/docs/commit-status are used
-  # to block PR based on coverage threshold.
   status:
     project:
       default:
+        # basic
         target: auto
         threshold: 80%
-    patch:
-      default:
-        informational: true
+        # base: auto 
+        # flags: 
+        #   - unit
+        # paths: 
+        #   - "src"
