--- a/.codecov.yaml
+++ b/.codecov.yaml
@@ -3,8 +3,8 @@ coverage:
     project:
       default:
         # basic
-        target: auto
-        threshold: 80%
+        target: 90%
+        # threshold: 80%
         # base: auto 
         # flags: 
         #   - unit
