Upload code coverage to Codecov
Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

--- a/.codecov.yaml
+++ b/.codecov.yaml
@@ -5,5 +5,4 @@ coverage:
         # basic
         target: 90%
         threshold: 0%
-        paths: 
-          - "src"
+        if_ci_failed: error
