--- a/.codecov.yaml
+++ b/.codecov.yaml
@@ -6,3 +6,6 @@ coverage:
         target: 90%
         threshold: 0%
         if_ci_failed: error
+    patch:
+      default:
+        informational: true
