--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
       NUPKG_OUTDIR: bin/Release/nugets
       COVERAGE_THRESHOLD: 70
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@v2
       - name: Parse release version
         run: python ./.github/scripts/get_release_version.py
       - name: Setup .NET Core
@@ -41,7 +41,7 @@ jobs:
         run: |
           dotnet test --configuration ${{ env.CONFIGURATION }} --collect:"XPlat Code Coverage"
       - name: Codecov
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v3
         with:
           file: "**/coverage.cobertura.xml"  # Specify the path to your Cobertura format coverage report file
       # The docker image is not pushed for pull requests,
