--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,9 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: "**/coverage.cobertura.xml"  # Specify the path to your Cobertura format coverage report file
+          flags: unittests # optional
+          name: codecov # optional
+          fail_ci_if_error: false # optional (default = false)
       # The docker image is not pushed for pull requests,
       # but the image is built to ensure that the Dockerfile and the sample app are valid.
       - name: Set a sample app registry when it is a pull request
