fail_ci_if_error true
Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -6,6 +6,7 @@ coverage:
         target: 90%
         threshold: 0%
         if_ci_failed: error
+        fail_ci_if_error: true
     patch:
       default:
         informational: true
