Update codecov.yml file (#121)
* Adding documentation for OOP

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* Update README.md

Co-authored-by: Shubham Sharma <shubhash@microsoft.com>

* Update README.md

Co-authored-by: Shubham Sharma <shubhash@microsoft.com>

* Adding command to code block

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* Adding code coverage in github workflow

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* Adding code coverage in github workflow

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* Adding cc in existing build pipeline

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* Adding code coverage assets

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* Adding coverlet.msbuild

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* Removing --no-build dotnet test run

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* using cobertura

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* using cobertura

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* using cobertura

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* using cobertura

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* using cobertura

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* removing configuration

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* modifying csproj

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* test cc

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* debug mode

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* running coverlet

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* running coverlet

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* report generator

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* check code coverage

Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

* check cod

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,9 @@ jobs:
       - name: Codecov
         uses: codecov/codecov-action@v3
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           file: "**/coverage.cobertura.xml"  # Specify the path to your Cobertura format coverage report file
+          fail_ci_if_error: true # optional (default = false)
       # The docker image is not pushed for pull requests,
       # but the image is built to ensure that the Dockerfile and the sample app are valid.
       - name: Set a sample app registry when it is a pull request
