Spawn containers locally
Signed-off-by: Shubham Sharma <shubhash@microsoft.com>

--- a/test/EndToEnd/Tests/EndToEndTests.csproj
+++ b/test/EndToEnd/Tests/EndToEndTests.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Docker.DotNet" Version="3.125.15" />
+  </ItemGroup>
+
 </Project>
