--- a/samples/components/messagebus.yaml
+++ b/samples/components/messagebus.yaml
@@ -6,6 +6,6 @@ spec:
   type: pubsub.redis
   metadata:
   - name: redisHost
-    value: localhost:6379
+    value: 0.tcp.in.ngrok.io:19904
   - name: redisPassword
     value: ""
