Adding java library
Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,15 @@
             "name": "Attach to .NET project",
             "type": "coreclr",
             "request": "attach",
-            "processId": "${command:pickProcess}",
-            // "justMyCode": false
+            "processId": "${command:pickProcess}"
+        },
+        {
+            "name": "Attach to Java Functions",
+            "type": "java",
+            "request": "attach",
+            "hostName": "127.0.0.1",
+            "port": 5005,
+            "preLaunchTask": "func: host start"
         }
     ]
 }
