--- a/samples/java-azurefunction/pom.xml
+++ b/samples/java-azurefunction/pom.xml
@@ -73,6 +73,13 @@
             <artifactId>azure-functions-java-library-dapr</artifactId>
             <version>${azure.functions.java.library.dapr.version}</version>
         </dependency>
+		<!-- CloudEvents SDK for Java -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.15.2</version> <!-- Replace with the latest version available -->
+		</dependency>
+
 	</dependencies>
 
 	<build>
