--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,8 +77,9 @@ jobs:
         run: rm -rf $NUPKG_OUTDIR/*${DEV_VERSION_SUFFIX}.*{nupkg,snupkg}
         # Building java-library
       - name: Set up JDK 8
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
+          distribution: 'microsoft'
           java-version: 8
       - name: Build Java library with Maven
         run: mvn package
