--- a/.gitignore
+++ b/.gitignore
@@ -264,7 +264,10 @@ __pycache__/
 .ionide
 
 # Local packages folder
-./local-packages/
+local-packages/
 
 # Coverage files
 coverage.cobertura.xml
+
+#Java target files
+target/
