--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,7 +89,7 @@ jobs:
         working-directory: ${{ env.JAVA_LIB_WORKING_DIRECTORY }}
       - name: Build Java Annotations
         if: startsWith(github.ref, 'refs/tags/v')
-        run: mvn --batch-mode --define=org.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn --update-snapshots
+        run: mvn clean package --batch-mode --define=org.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn --update-snapshots
         working-directory: ${{ env.JAVA_LIB_WORKING_DIRECTORY }}
       - name: Copy Java Annotations to staging directory
         if: startsWith(github.ref, 'refs/tags/v')
