Adding SBOM generation step
Signed-off-by: MD Ashique <noorani.ashique5@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,9 +106,13 @@ jobs:
       - name: Generate SBOM manifest
         if: startsWith(github.ref, 'refs/tags/v')
         run: |
-          curl -Lo sbom-tool https://github.com/microsoft/sbom-tool/releases/latest/download/sbom-tool-linux-x64
-          chmod +x sbom-tool
-          ./sbom-tool generate -b ${{ env.MAVEN_OUTDIR }} -pn "Azure Functions Dapr Java Triggers and Bindings" -pv "${{ env.REL_VERSION }}"
+          sudo apt-get update
+          sudo apt-get install wget
+          wget https://github.com/microsoft/sbom-tool/releases/download/v1.2.0/sbom-tool-linux-x64
+          chmod +x sbom-tool-linux-x64
+          ls -l sbom-tool-linux-x64
+          sudo mv sbom-tool-linux-x64 /usr/local/bin/sbom-tool
+          sbom-tool generate -b ${{ env.MAVEN_OUTDIR }} -pn "Azure Functions Dapr Java Triggers and Bindings" -pv "${{ env.REL_VERSION }}"
         working-directory: ${{ env.JAVA_LIB_WORKING_DIRECTORY }}
       - name: Upload .Net artifacts
         uses: actions/upload-artifact@master
